moved coming soon note. added button promo. css updates for this

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 					<img src="images/logo-envision-center.png" width="331" height="114" alt="Envision Center">
 				</div>
 				<!-- end logo -->
+				<h2>New Website Coming Soon</h2>
 				<h1>Entertainment &amp; Conference Center Rentals</h1>
 			</header>
 			
 			<div id="subheader">
-				<h2>Website Under Construction</h2>
+			<a id="ButtonPromo" class="button" href="#" target="_blank">View / Download Rate Card &nbsp;<img src="images/icon-pdf.png" width="28" height="29" alt="pdf" class="icon-pdf"></a>
 				<h3>*note: click on images for larger view</h3>
 			</div>
 			<!-- end subheader -->
@@ -61,7 +62,7 @@
 						<td align="center" valign="middle"><a rel="photo_gallery" href="images/pic-main-aud-05-large.jpg" title="Envision Auditorium - 470 seated, 500 standing - Stage with Sprung Floor, Multi-Camera Video"><img src="images/pic-main-aud-05.jpg" width="235" height="157" alt="Envision Auditorium - 05"></a></td>
 					</tr>
 					<tr>
-						<td colspan="3" align="center" valign="middle"><span class="caption">Envision Auditorium - 470 seated, 500 standing - Stage with Sprung Floor, Multi-Camera Video</span></td>
+						<td colspan="3" align="center" valign="middle"><span class="caption"><span class="title">Envision Auditorium</span> - 470 seated, 500 standing - Stage with Sprung Floor, Multi-Camera Video</span></td>
 					</tr>
 				</table>
 			</div>
@@ -75,7 +76,7 @@
 						<td align="center" valign="middle"><a rel="photo_gallery" href="images/pic-Victory-Aud-Med-Green-Lights.jpg" title="Victory Auditorium - 244 seated, 300 standing"><img src="images/pic-vict-aud-03.jpg" width="289" height="192" alt="Victory Auditorium - 244 seated, 300 standing"></a></td>
 					</tr>
 					<tr>
-						<td colspan="3" align="center" valign="middle"><span class="caption">Victory Auditorium - 244 seated, 300 standing</span></td>
+						<td colspan="3" align="center" valign="middle"><span class="caption"><span class="title">Victory Auditorium</span> - 244 seated, 300 standing</span></td>
 					</tr>
 				</table>
 			</div>
@@ -95,8 +96,8 @@
 						<td align="center" valign="middle"><a rel="photo_gallery" href="images/pic-Office-Suite-West-view.jpg" title="3 Room Office Suite 700 sq ft. For 9-5 Mon-Fri Business"><img src="images/pic-office-01.jpg" width="272" height="190" alt="3 Room Office Suite 700 sq ft "></a></td>
 					</tr>
 					<tr>
-						<td colspan="2" align="center" valign="top"><span class="caption">Sunset Studio with lighting grid - 150 capacity</span></td>
-						<td align="center" valign="top"><span class="caption office">3 Room Office Suite 700 sq ft
+						<td colspan="2" align="center" valign="top"><span class="caption"><span class="title">Sunset Studio</span> with lighting grid - 150 capacity</span></td>
+						<td align="center" valign="top"><span class="caption office"><span class="title">3 Room Office</span> Suite 700 sq ft
 							<br>
 							For 9-5 Mon-Fri Business</span></td>
 					</tr>
