special badge styling - first pass

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 			</header>
 			
 			<div id="subheader">
-			<a id="ButtonPromo" class="button" href="#" target="_blank">View / Download Rate Card &nbsp;<img src="images/icon-pdf.png" width="28" height="29" alt="pdf" class="icon-pdf"></a>
+				<div class="promo">
+					<a id="ButtonPromo" class="button special" href="#">DISCOUNT On Turn Key<img src="images/badge-special.png" width="59" height="58" alt="special" class="icon-special"></a>
+				</div>
 				<h3>*note: click on images for larger view</h3>
 			</div>
 			<!-- end subheader -->
