--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
 					<div style="display:none;">
 						<div id="PromoDetails">
 							<h1>AVAILABLE NOW!</h1>
-							<p>Discounted Weekly Rentals on One Year Lease including instruments and equipment.* Turn Key. No Set up/Take Down. Weekly meetings available Sunday 3:30p-6:30p, Mon/Tues, Wed possible. All weekdays in morning/afternoon.</p>
-							<p>Victory Auditorium, Seats 250, 3000 sq ft, $2500 pr mo.<br />
-							Sunset Studio Auditorium, Seats 150, 2100 sq ft, $2000 pr mo<br />
-							2nd weekly meeting at further discount</p>
-							<p>Both Auditoriums include additional 2000 sq foot support area with furnished child care/support rooms. * Both Auditoriums include keyboard, drum set, playback monitors, multi-channel audio mixing board, speakers, monitors, microphones, projector with mounted screen, stage lighting, special lighting, air/heat, parking.</p> 
+							<p><strong>Discounted Weekly Rentals on One Year Lease including instruments and equipment.* Turn Key. No Set up/Take Down.</strong> 
+								Weekly meetings available Sunday 3:30p-6:30p, Mon/Tues, Wed possible. All weekdays in morning/afternoon.</p>
+							<p><strong><a href="#photos-victory-auditorium">Victory Auditorium</a>, Seats 250, 3000 sq ft, $2500 pr mo.<br />
+							<a href="#photos-studio-office">Sunset Studio Auditorium</a>, Seats 150, 2100 sq ft, $2000 pr mo.<br />
+							2nd weekly meeting at further discount</strong></p>
+							<p>Both Auditoriums include additional 2000 sq foot support area with furnished child care/support rooms. 
+							* Both Auditoriums include keyboard, drum set, playback monitors, multi-channel audio mixing board, speakers, monitors, microphones, projector with mounted screen, stage lighting, special lighting, air/heat, parking.</p> 
 						</div>
 					</div>
 				</div>
