--- a/index.html
+++ b/index.html
@@ -46,14 +46,17 @@
 			
 			<div id="subheader">
 				<div class="promo">
-					<a id="ButtonPromo" class="button special" href="#PromoDetails"><span class="title"><strong>DISCOUNT</strong> On Turn Key Worship / Live Event Center</span><span class="click">Click for Details</span><img src="images/badge-special.png" width="59" height="58" alt="special" class="icon-special"></a>
+					<a id="ButtonPromo" class="button special" href="#PromoDetails"><span class="title"><strong>DISCOUNT</strong>click for details</span><span class="click">Turn Key Worship/Live Event Center<br />
+						Weekly Rental including instruments & Equipment</span><img src="images/badge-special.png" width="59" height="58" alt="special" class="icon-special"></a>
 					<div style="display:none;">
 						<div id="PromoDetails">
 							<h1>AVAILABLE NOW!</h1>
 							<p><strong>Discounted Weekly Rentals on One Year Lease including instruments and equipment.* Turn Key. No Set up/Take Down.</strong> 
 								Weekly meetings available Sunday 3:30p-6:30p, Mon/Tues, Wed possible. All weekdays in morning/afternoon.</p>
-							<p><strong><a href="#photos-victory-auditorium">Victory Auditorium</a>, Seats 250, 3000 sq ft, $2500 pr mo.<br />
-							<a href="#photos-studio-office">Sunset Studio Auditorium</a>, Seats 150, 2100 sq ft, $2000 pr mo.<br />
+							<p><strong><a href="#photos-victory-auditorium">Victory Auditorium</a>, Seats 250, 3000 sq ft<br />
+							<a href="#photos-studio-office">Sunset Studio Auditorium</a>, Seats 150, 2100 sq ft<br />
+							Balboa Banquet Room, Seats 90, 1140 sq ft<br />
+							Approx $1300 - $2500 Mo.<br />
 							2nd weekly meeting at further discount</strong></p>
 							<p>Both Auditoriums include additional 2000 sq foot support area with furnished child care/support rooms. 
 							* Both Auditoriums include keyboard, drum set, playback monitors, multi-channel audio mixing board, speakers, monitors, microphones, projector with mounted screen, stage lighting, special lighting, air/heat, parking.</p> 
